ASUSFETest/src/objects/Test_Score__c.object
<CustomObject>
    <description>Object containing scores from GRE, GMAT, and TOEFL</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Test Scores</relationshipLabel>
        <relationshipName>Test_Scores_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Test Scores</relationshipLabel>
        <relationshipName>Test_Scores_Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <description>Labels when the test was received: when the person was a Lead or a Contact</description>
        <label>Student Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Component_Percentile__c</fullName>
        <label>Percentile</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Test_Component_Score__c</fullName>
        <label>Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Component__c</fullName>
        <label>Test Component</label>
        <picklist>
            <controllingField>Test_Type__c</controllingField>
            <picklistValues>
                <fullName>Analytical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Reasoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantitative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPEAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biochemistry, Cell &amp; Molecular Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biochemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cellular and Molecular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature in English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experimental Psychology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mathematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organismal Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Psychology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Record_Number__c</fullName>
        <label>Test Record Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Source__c</fullName>
        <label>Test Source</label>
        <picklist>
            <picklistValues>
                <fullName>Self-Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Official</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <label>Test Type</label>
        <picklist>
            <picklistValues>
                <fullName>GRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE Subject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOEFL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Test Score</label>
    <listViews>
        <fullName>All_Test_Scores</fullName>
        <columns>Lead__c</columns>
        <columns>Contact__c</columns>
        <columns>Test_Date__c</columns>
        <columns>Test_Type__c</columns>
        <columns>Test_Source__c</columns>
        <columns>Test_Component__c</columns>
        <columns>Test_Component_Score__c</columns>
        <columns>Test_Component_Percentile__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Test Scores</label>
    </listViews>
    <nameField>
        <label>Test Score Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Scores</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>